--- a/POS_System/Components/Pages/Home.razor
+++ b/POS_System/Components/Pages/Home.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
+<AuthorizeView Policy="Test">
+    <PageTitle>Home</PageTitle>
 
-<PageTitle>Home</PageTitle>
+    <h1>Hello, world!</h1>
 
-<h1>Hello, world!</h1>
+    Welcome to your new app.
+</AuthorizeView>
 
-Welcome to your new app.
+
