--- a/POS_System/Components/Pages/Home.razor
+++ b/POS_System/Components/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-<AuthorizeView Policy="Test">
+<AuthorizeView Roles="SuperAdmin">
     <PageTitle>Home</PageTitle>
 
     <h1>Hello, world!</h1>
